--- a/src/HomePage/styles/FreshBlog.css
+++ b/src/HomePage/styles/FreshBlog.css
@@ -72,14 +72,14 @@
 
 }
 
-a {
-  color: black;
+.fresh-blog-link {
+  color: rgb(34, 34, 34);
   text-decoration: none;
-
 }
-a:hover {
+
+.fresh-blog-link:hover {
   text-decoration: none;
-  color: black;
+  color: rgb(34, 34, 34);
 }
 
 .bloglink {
