--- a/src/HomePage/styles/RecentReviews.css
+++ b/src/HomePage/styles/RecentReviews.css
@@ -26,10 +26,10 @@
 }
 
 .recent-reviews-individual-card {
-  /*width: 20vw;*/
   background-color: white;
   text-align: center;
-  padding: 30px;
+  padding-top: 30px;
+  margin-bottom: 80px;
   border-radius: 3px;
 }
 
@@ -112,8 +112,8 @@
 .recent-reviews-product-picture {
   width: 250px;
   height: 250px;
-  max-width: 90%;
-  max-height: 50%;
+  max-width: 100%;
+  max-height: 30%;
   overflow: hidden;
   border-radius: 3px;
   margin-left: auto;
@@ -121,6 +121,11 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.recent-reviews-product-description {
+  padding-top: 5px;
+  color: rgb(34, 34, 34);
 }
 
 #recent-reviews-product-picture-1 {
