--- a/src/trending/styles/Footer.css
+++ b/src/trending/styles/Footer.css
@@ -20,12 +20,12 @@
   padding: 1em;
 }
 
-a {
+.footer-link a {
   color: #000;
   text-decoration: none;
 }
 
-a:hover {
+.footer-link a:hover {
   text-decoration: underline;
 }
 
